# rch_cpp_gis_lib

./: .clang-format  CMakeLists.txt
src/libs/: CMakeLists.txt
src/libs/core/: CMakeLists.txt  edge.cpp  edge.h  functions.cpp  functions.h  point.cpp  point.h  two_vertices.cpp  two_vertices.h
src/libs/core/pywrap/: CMakeLists.txt  pywrap.cpp
src/libs/reserves/: CMakeLists.txt  mean_method.cpp  mean_method.h  triangles_method.cpp  triangles_method.h
src/libs/reserves/pywrap/: CMakeLists.txt  pywrap.cpp
src/libs/triangulation/: CMakeLists.txt  triangulation.cpp  triangulation.h
